// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextArea /> renders 1`] = `
<div
  class="field"
>
  <label
    class="field__label"
    for="field_1"
  >
    Jawn
  </label>
  <textarea
    class="field__input"
    id="field_1"
  >
    hello
  </textarea>
</div>
`;

exports[`<TextArea /> renders with a custom ID 1`] = `
<div
  class="field"
>
  <label
    class="field__label"
    for="foo"
  >
    Jawn
  </label>
  <textarea
    class="field__input"
    id="foo"
  >
    hello
  </textarea>
</div>
`;

exports[`<TextArea /> renders with an error 1`] = `
<div
  class="field field--erroneous"
>
  <label
    class="field__label field__label--erroneous"
    for="field_4"
    id="field_4_label"
  >
    Jawn
  </label>
  <textarea
    aria-labelledby="field_4_label field_4_error"
    class="field__input field__input--erroneous"
    id="field_4"
  >
    hello
  </textarea>
  <span
    class="field__error"
    id="field_4_error"
    role="alert"
  >
    Oh no!
  </span>
</div>
`;

exports[`<TextArea /> renders with help 1`] = `
<div
  class="field"
>
  <label
    class="field__label"
    for="field_5"
  >
    Jawn
    <span
      class="field__help"
    >
      Good luck
    </span>
  </label>
  <textarea
    class="field__input"
    id="field_5"
  >
    hello
  </textarea>
</div>
`;

exports[`<TextArea /> renders with inline 1`] = `
<div
  class="field field--inline"
>
  <label
    class="field__label field__label--inline"
    for="field_11"
  >
    Jawn
  </label>
  <textarea
    class="field__input field__input--inline"
    id="field_11"
  >
    hello
  </textarea>
</div>
`;

exports[`<TextArea /> renders with large 1`] = `
<div
  class="field field--large"
>
  <label
    class="field__label field__label--large"
    for="field_9"
  >
    Jawn
  </label>
  <textarea
    class="field__input field__input--large"
    id="field_9"
  >
    hello
  </textarea>
</div>
`;

exports[`<TextArea /> renders with small 1`] = `
<div
  class="field field--small"
>
  <label
    class="field__label field__label--small"
    for="field_10"
  >
    Jawn
  </label>
  <textarea
    class="field__input field__input--small"
    id="field_10"
  >
    hello
  </textarea>
</div>
`;

exports[`<TextArea /> renders with success 1`] = `
<div
  class="field field--success"
>
  <label
    class="field__label field__label--success"
    for="field_6"
  >
    Jawn
  </label>
  <textarea
    class="field__input field__input--success"
    id="field_6"
  >
    hello
  </textarea>
</div>
`;

exports[`<TextArea /> renders with touched 1`] = `
<div
  class="field field--touched field--success"
>
  <label
    class="field__label field__label--touched field__label--success"
    for="field_7"
  >
    Jawn
  </label>
  <textarea
    class="field__input field__input--touched field__input--success"
    id="field_7"
  >
    hello
  </textarea>
</div>
`;

exports[`<TextArea /> renders without a label 1`] = `
<div
  class="field"
>
  <textarea
    class="field__input"
    id="field_2"
  >
    hello
  </textarea>
</div>
`;

exports[`<TextArea /> renders without a wrapper 1`] = `
<label
  class="field__label"
  for="field_3"
>
  Jawn
</label>
`;
